added codes to test residuals of actual vs predicted

--- a/house_prices_model.ipynb
+++ b/house_prices_model.ipynb
@@ -2,16 +2,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/chipojaya1/housing-prices-prediction/blob/main/house_prices_model.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "id": "3375d91b-23e1-46eb-9f46-970c1b884fce",
       "metadata": {
         "id": "3375d91b-23e1-46eb-9f46-970c1b884fce",
@@ -4618,12 +4608,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "O55-DBoTadwR",
-        "outputId": "f363ded2-189b-4ca0-e636-eab6ec51ad59",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 763
-        }
+        },
+        "id": "O55-DBoTadwR",
+        "outputId": "f363ded2-189b-4ca0-e636-eab6ec51ad59"
       },
       "id": "O55-DBoTadwR",
       "execution_count": 73,
@@ -5738,29 +5728,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 128,
+      "execution_count": null,
       "id": "cb6f47ab-9a99-4afb-bef9-3e60add7a00e",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 215
-        },
-        "id": "cb6f47ab-9a99-4afb-bef9-3e60add7a00e",
-        "outputId": "5b61ce22-2697-4a99-d538-e93b8355bb78"
+        "id": "cb6f47ab-9a99-4afb-bef9-3e60add7a00e"
       },
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'sc' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-128-d0d4f9b8fba4>\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Scale the features\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mscaler\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mStandardScaler\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0msc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# Fit the scaler on the training data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mX_train\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mX_test\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test_aligned\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'sc' is not defined"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Scale the features\n",
         "scaler = StandardScaler()\n",
@@ -5772,6 +5745,20 @@
         "X_train=sc.transform(X_train)\n",
         "X_test=sc.transform(X_test_aligned)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Splitting the data into training and validation data\n",
+        "X_train, X_val, y_train, y_val = train_test_split(X_train_scaled,y_train, test_size=0.3, random_state=2)\n",
+        "print(X.shape, X_train_scaled.shape, X_test.shape)"
+      ],
+      "metadata": {
+        "id": "NkgXN4Hjnqft"
+      },
+      "id": "NkgXN4Hjnqft",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -6661,12 +6648,12 @@
         "lassoreg.fit(X_train_scaled, y_train)"
       ],
       "metadata": {
-        "id": "CB2us7Zji4tM",
-        "outputId": "43ebd97a-0f6a-45d0-8517-ebaaf703cc97",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 80
-        }
+        },
+        "id": "CB2us7Zji4tM",
+        "outputId": "43ebd97a-0f6a-45d0-8517-ebaaf703cc97"
       },
       "id": "CB2us7Zji4tM",
       "execution_count": 117,
@@ -7547,12 +7534,12 @@
         "enetreg.fit(X_train_scaled, y_train)"
       ],
       "metadata": {
-        "id": "nlxid5S3jejl",
-        "outputId": "923fd617-bc9b-4afa-c115-cfd99d5c7b90",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 80
-        }
+        },
+        "id": "nlxid5S3jejl",
+        "outputId": "923fd617-bc9b-4afa-c115-cfd99d5c7b90"
       },
       "id": "nlxid5S3jejl",
       "execution_count": 119,
@@ -10042,6 +10029,23 @@
     {
       "cell_type": "code",
       "source": [
+        "# actual vs predicted\n",
+        "plt.scatter(Y_train, training_data_prediction)\n",
+        "plt.xlabel(\"Actual Price\")\n",
+        "plt.ylabel(\"Predicted Price\")\n",
+        "plt.title(\"Actual Price vs Predicted Price\")\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "9L3XQEvoobNP"
+      },
+      "id": "9L3XQEvoobNP",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# plot residuals\n",
         "resid = ypred - ytest.saleprice\n",
         "\n",
@@ -10088,8 +10092,7 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
