final for submission

--- a/house_prices_model.ipynb
+++ b/house_prices_model.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/chipojaya1/housing-prices-prediction/blob/main/house_prices_model.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "3375d91b-23e1-46eb-9f46-970c1b884fce",
       "metadata": {
         "id": "3375d91b-23e1-46eb-9f46-970c1b884fce",
@@ -2182,12 +2192,12 @@
         "train_df['MasVnrArea'].head(10)"
       ],
       "metadata": {
-        "id": "UdTG7IP2bib7",
-        "outputId": "90455dce-19a1-4ecb-808d-631d5ed9a90d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 397
-        }
+        },
+        "id": "UdTG7IP2bib7",
+        "outputId": "90455dce-19a1-4ecb-808d-631d5ed9a90d"
       },
       "id": "UdTG7IP2bib7",
       "execution_count": 20,
@@ -2287,12 +2297,12 @@
         "train_df['LotFrontage'].head(10)"
       ],
       "metadata": {
-        "id": "vn6BLXMpc9mf",
-        "outputId": "9f1f285b-47b6-437e-a125-dca6eebe1045",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 397
-        }
+        },
+        "id": "vn6BLXMpc9mf",
+        "outputId": "9f1f285b-47b6-437e-a125-dca6eebe1045"
       },
       "id": "vn6BLXMpc9mf",
       "execution_count": 34,
@@ -2428,12 +2438,12 @@
         "train_df['MasVnrType'].head()"
       ],
       "metadata": {
-        "id": "a0Vy2qRPb3xL",
-        "outputId": "853da5ec-1b5e-418f-a173-9a5c281d6c0b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 241
-        }
+        },
+        "id": "a0Vy2qRPb3xL",
+        "outputId": "853da5ec-1b5e-418f-a173-9a5c281d6c0b"
       },
       "id": "a0Vy2qRPb3xL",
       "execution_count": 23,
@@ -2521,12 +2531,12 @@
         "train_df['FireplaceQu'].head()"
       ],
       "metadata": {
-        "id": "gjYIsSWOcshL",
-        "outputId": "97f69701-e58e-49a1-9460-a76dc02aa897",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 241
-        }
+        },
+        "id": "gjYIsSWOcshL",
+        "outputId": "97f69701-e58e-49a1-9460-a76dc02aa897"
       },
       "id": "gjYIsSWOcshL",
       "execution_count": 30,
@@ -2645,12 +2655,12 @@
         "train_df['Electrical'].head(10)"
       ],
       "metadata": {
-        "id": "-7pBFUGgcSHh",
-        "outputId": "4e3807d7-cef5-4414-b984-914495627b56",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 397
-        }
+        },
+        "id": "-7pBFUGgcSHh",
+        "outputId": "4e3807d7-cef5-4414-b984-914495627b56"
       },
       "id": "-7pBFUGgcSHh",
       "execution_count": 29,
@@ -4589,12 +4599,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "lby1Sbmmsbig",
-        "outputId": "77d3879b-8f6d-4480-8201-970e7fc07915",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "lby1Sbmmsbig",
+        "outputId": "77d3879b-8f6d-4480-8201-970e7fc07915"
       },
       "id": "lby1Sbmmsbig",
       "execution_count": 94,
@@ -6206,11 +6216,11 @@
         "print(\"Test data shape:\", X_test_final.shape)"
       ],
       "metadata": {
-        "id": "1XaPoVsF4SI3",
-        "outputId": "71c3ad1a-591d-45c5-b265-829d30994233",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1XaPoVsF4SI3",
+        "outputId": "71c3ad1a-591d-45c5-b265-829d30994233"
       },
       "id": "1XaPoVsF4SI3",
       "execution_count": 229,
@@ -6291,12 +6301,12 @@
         "xgbreg.fit(X_train, y_train)"
       ],
       "metadata": {
-        "id": "aBQG_ib2cKo5",
-        "outputId": "052f818f-f724-41db-e31f-6034767dff9e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 323
-        }
+        },
+        "id": "aBQG_ib2cKo5",
+        "outputId": "052f818f-f724-41db-e31f-6034767dff9e"
       },
       "id": "aBQG_ib2cKo5",
       "execution_count": 232,
@@ -6946,12 +6956,12 @@
         "fig.show()\n"
       ],
       "metadata": {
-        "id": "XzxZFKaxJSlY",
-        "outputId": "de12bc1a-2af8-4974-96a1-57b80e71ab46",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "XzxZFKaxJSlY",
+        "outputId": "de12bc1a-2af8-4974-96a1-57b80e71ab46"
       },
       "id": "XzxZFKaxJSlY",
       "execution_count": 239,
@@ -7040,11 +7050,11 @@
         "\n"
       ],
       "metadata": {
-        "id": "pHykFJ5ABOOR",
-        "outputId": "8021b46d-28f6-46db-a2c5-5fe6948436f8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pHykFJ5ABOOR",
+        "outputId": "8021b46d-28f6-46db-a2c5-5fe6948436f8"
       },
       "id": "pHykFJ5ABOOR",
       "execution_count": 245,
@@ -7166,11 +7176,11 @@
         "print(\"Best RMSE:\", np.sqrt(-grid_search.best_score_))\n"
       ],
       "metadata": {
-        "id": "dOEGb5opD9OI",
-        "outputId": "0fc400b5-7c1d-46ea-fab6-c4efd7229de8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dOEGb5opD9OI",
+        "outputId": "0fc400b5-7c1d-46ea-fab6-c4efd7229de8"
       },
       "id": "dOEGb5opD9OI",
       "execution_count": 255,
@@ -7322,12 +7332,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "mI3WrqcjWGAY",
-        "outputId": "902f4883-eae7-4088-b50f-7e4ade88d24c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 573
-        }
+        },
+        "id": "mI3WrqcjWGAY",
+        "outputId": "902f4883-eae7-4088-b50f-7e4ade88d24c"
       },
       "id": "mI3WrqcjWGAY",
       "execution_count": 251,
@@ -7360,11 +7370,11 @@
         "ls"
       ],
       "metadata": {
-        "id": "LfBYntGLYVE7",
-        "outputId": "0fc0167c-05fd-4edd-f3ff-d7a6050b83b7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LfBYntGLYVE7",
+        "outputId": "0fc0167c-05fd-4edd-f3ff-d7a6050b83b7"
       },
       "id": "LfBYntGLYVE7",
       "execution_count": 208,
@@ -7397,11 +7407,11 @@
         "print(f\"R-squared Score: {r2:.4f}\")"
       ],
       "metadata": {
-        "id": "WFms_W-vYPL_",
-        "outputId": "8c5b8387-1c61-4ead-ee2b-243e2283eba6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WFms_W-vYPL_",
+        "outputId": "8c5b8387-1c61-4ead-ee2b-243e2283eba6"
       },
       "id": "WFms_W-vYPL_",
       "execution_count": 252,
@@ -7432,11 +7442,11 @@
       ],
       "metadata": {
         "id": "9L3XQEvoobNP",
-        "outputId": "059a4f21-057c-4efe-b51c-3018de58114d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 573
-        }
+        },
+        "outputId": "059a4f21-057c-4efe-b51c-3018de58114d"
       },
       "id": "9L3XQEvoobNP",
       "execution_count": 253,
@@ -7478,11 +7488,11 @@
       ],
       "metadata": {
         "id": "y0E52hU1l9X1",
-        "outputId": "082e005f-398f-4cc3-808d-c4b579c71269",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 573
-        }
+        },
+        "outputId": "082e005f-398f-4cc3-808d-c4b579c71269"
       },
       "id": "y0E52hU1l9X1",
       "execution_count": 254,
@@ -7512,7 +7522,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
